[package]
name = "grep_in_rust"
license = "MIT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


# opt-level -> optimization level [0 -> 3]
[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3